--- a/src/CssFiles/Menu.css
+++ b/src/CssFiles/Menu.css
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
+}
 
 
 .deleteButton {
@@ -35,4 +35,12 @@
 .deleteButton:hover {
     background-color: yellow;
     color: black;
+}
+
+.dayButtons{
+    background-color: teal;
+    border-radius: 100px;
+    padding: 5px;
+    margin: 10px;
+    width: 50px;
 }
