--- a/src/CssFiles/Pantry.css
+++ b/src/CssFiles/Pantry.css
@@ -2,11 +2,13 @@
     background-color: teal;
     color: white;
     border-radius: 10px;
-    margin: 15px;
+    margin-top: 50px;
     padding: 10px;
     width: 200px;
+    border-color: teal;
 }
 
 .pantryButtons:hover {
-    background-color: aqua;
+    background-color:  #006666;
+    border-color: #006666;
 }
