--- a/src/CssFiles/Menu.css
+++ b/src/CssFiles/Menu.css
@@ -5,7 +5,7 @@
     margin: 10px 10px 10px 10px;
     border-radius: 10px;
     width: 80%;
-    padding: 10px;
+    padding: 5px;
 }
 
 .NavigationBar {
@@ -22,7 +22,7 @@
 }
 
 
-.deleteButton {
+/* .deleteButton {
     margin: 10px 5px 10px 5px;
     background-color: red;
     border-color: black;
@@ -35,7 +35,7 @@
 .deleteButton:hover {
     background-color: yellow;
     color: black;
-}
+} */
 
 .dayButtons{
     background-color: teal;
@@ -43,4 +43,12 @@
     padding: 5px;
     margin: 10px;
     width: 50px;
+}
+
+.topButtons{
+    background-color: aquamarine;
+    border-radius: 10px;
+    padding: 5px;
+    margin: 10px;
+    
 }
