--- a/src/CssFiles/Menu.css
+++ b/src/CssFiles/Menu.css
@@ -45,7 +45,7 @@
   
   }
 
-/* .deleteButton {
+.deleteButton {
     margin: 10px 5px 10px 5px;
     background-color: red;
     border-color: black;
@@ -58,7 +58,7 @@
 .deleteButton:hover {
     background-color: yellow;
     color: black;
-} */
+}
 
 .dayButtons{
     background-color: teal;
@@ -73,5 +73,16 @@
     border-radius: 10px;
     padding: 5px;
     margin: 10px;
+    
+}
+
+.editButton{
+    margin: 10px 5px 10px 5px;
+    background-color: blue;
+    border-color: black;
+    border-radius: 5px;
+    padding: 5px;
+    text-decoration: none;
+    color: black;
     
 }
